# salmon

./: .clang-format  .cmakelintrc  .drone.yml  .drone.yml.sig  .gitignore  .lgtm.yml  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  README.md  _config.yml  current_version.txt  drone.yml  index.html  index.md  params.json  sample_data.tgz
.codex/: REFRACTOR_BOOKMARK.md
.drone/: build.sh  copy_build.sh  test_quant.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  release.yml
_data/: navigation.yml
_includes/: google_analytics.html  head.html
_layouts/: page.html
_sass/: _page.scss
_templates/: page
about/: index.md
assets/: dl_tut_reads.sh  quant_tut_samples.sh
cmake/: CheckNoSystemZlib.cmake  CheckTBBLinkage.cmake  PostInstall.cmake  SalmonDependencies.cmake  SalmonInstall.cmake  SalmonProjectOptions.cmake  SalmonVersion.cmake  SimpleTest.cmake  TestAlevinStub.cmake  TestBenchmarkSmoke.cmake  TestSalmon.cmake  TestSalmonFMD.cmake  TestSalmonQuasi.cmake  UnitTests.cmake
cmake/Modules/: FindCereal.cmake  FindHTSlib.cmake  FindJellyfish.cmake  FindJemalloc.cmake  FindMimalloc.cmake  FindTBB.cmake  FindZLIBNG.cmake  Findcereal.cmake  Findlibdivsufsort.cmake  Findlibgff.cmake  Findlibstadenio.cmake
contact/: index.md
doc/: FileFormats.md  Makefile  header-ownership-map.md  license-header.txt  requirements.txt  steps_to_prepare_release.md
doc/source/: alevin.rst  building.rst  conf.py  file_formats.rst  index.rst  library_type.rst  license.rst  sailfish.rst  salmon.rst
docker/: Dockerfile  build_test.sh
faq/: index.md
getting_started/: index.md
include/: AlevinHash.hpp  AlevinKmer.hpp  AlevinOpts.hpp  AlevinSalmonOpts.hpp  AlevinTypes.hpp  AlevinUtils.hpp  AlignmentCommon.hpp  AlignmentGroup.hpp  AlignmentLibrary.hpp  AlignmentModel.hpp  AtomicMatrix.hpp  BAMQueue.hpp  BAMQueue.tpp  BAMUtils.hpp  BWAMemStaticFuncs.hpp  BWAUtils.hpp  BarcodeGroup.hpp  BarcodeModel.hpp  BiasIndex.hpp  BiasParams.hpp  BinaryLiteral.hpp  BooPHF.h  BootstrapWriter.hpp  ClusterForest.hpp  CollapsedCellOptimizer.hpp  CollapsedEMOptimizer.hpp  CollapsedGibbsSampler.hpp  CollapsedIterativeOptimizer.hpp.bak  CommonTypes.hpp  Dedup.hpp  DedupUMI.hpp  DistributionUtils.hpp  EMUtils.hpp  EffectiveLengthStats.hpp  EquivalenceClassBuilder.hpp  ErrorModel.hpp  FASTAParser.hpp  FastxParser.hpp  FastxParserThreadUtils.hpp  Filter.hpp  (+101 more)
include/core/: algorithm.hpp  any.hpp  array.hpp  deque.hpp  forward_list.hpp  functional.hpp  internal.hpp  iterator.hpp  list.hpp  map.hpp  memory.hpp  memory_resource.hpp  optional.hpp  propagate_const.hpp  regex.hpp  typeinfo.hpp  unordered_map.hpp  utility.hpp  variant.hpp  vector.hpp
include/jellyfish/: int128.hpp  mer_dna.hpp
include/ksw2pp/: KSW2Aligner.hpp  ksw2.h
include/metro/: metrohash.h  metrohash128.h  metrohash128crc.h  metrohash64.h  platform.h  testvector.h
scripts/: AddHeaders.sh  ComputeMutationRate.py  ConvertBootstrapsToTSV.py  Dockerfile  MutateReference.py  build_docker_binary.sh  bump_version.sh  check_include_policy.py  check_refactor_policy.py  check_shasum.sh  compile.sh  cpld.bash  fetchPufferfish.sh  fetchRapMap.sh  lint.sh  make-release.sh  merge_into_develop.sh  merge_into_master.sh  push-binary.sh  runner.sh  test_sim_corr.py
selective_alignment_script/: accuracy_measure.ipynb  clean_gencode.sh  generate_transcript_subset.py  make_gid_tid.sh  pipleline.snake  test.txt
src/: Alevin.cpp  AlevinHash.cpp  AlevinUtils.cpp  AlignmentCommon.cpp  AlignmentModel.cpp  BAMUtils.cpp  BWAUtils.cpp  BiasCorrectionDriver.cpp  BuildSalmonIndex.cpp  CMakeLists.txt  CollapsedCellOptimizer.cpp  CollapsedEMOptimizer.cpp  CollapsedGibbsSampler.cpp  ComputeBiasFeatures.cpp  Dedup.cpp  DedupUMI.cpp  DistributionUtils.cpp  EMUtils.cpp  EffectiveLengthStats.cpp  ErrorModel.cpp  FASTAParser.cpp  FastxParser.cpp  FragmentLengthDistribution.cpp  FragmentList.cpp  FragmentStartPositionDistribution.cpp  GZipWriter.cpp  GenomicFeature.cpp  Graph.cpp  JellyfishMerCounter.cpp  LibraryFormat.cpp  LookUpTableUtils.cpp  MultithreadedBAMParser.cpp  ONTAlignmentModel.cpp  PCA.cpp  PCAUtils.cpp  PerformBiasCorrection.cpp  PerformBiasCorrection_old.cpp  ProgramOptionsGenerator.cpp  QSufSort.c  SBModel.cpp  (+30 more)
src-rs/: CMakeLists.txt  Cargo.toml
src-rs/src/: analyze_cell.rs  bootstrap.rs  lib.rs  optimize.rs  parse.rs  schema.rs
src/alignment/: AlignmentCommon.cpp  AlignmentModel.cpp  BAMUtils.cpp  ONTAlignmentModel.cpp  SalmonQuantifyAlignments.cpp
src/alignment/pipeline/: AlignmentPipelineStages.cpp
src/cli/: ProgramOptionsGenerator.cpp  Salmon.cpp  VersionChecker.cpp
src/commands/: AlevinRemoved.cpp  SalmonQuantMerge.cpp
src/index/: BuildSalmonIndex.cpp
src/inference/: CollapsedEMOptimizer.cpp  CollapsedGibbsSampler.cpp  EMUtils.cpp
src/io/: AlignmentIO.cpp  FASTAParser.cpp  FastxParser.cpp  FragmentList.cpp  StadenUtils.cpp
src/jellyfish/: mer_dna.cc
src/ksw2pp/: KSW2Aligner.cpp  kalloc.c  ksw2_dispatch.c  ksw2_extd.c  ksw2_extd2_sse.c  ksw2_extf2_sse.c  ksw2_exts2_sse.c  ksw2_extz.c  ksw2_extz2_sse.c  ksw2_gg.c  ksw2_gg2.c  ksw2_gg2_sse.c
src/metro/: metrohash128.cpp
src/model/: EffectiveLengthStats.cpp  FragmentLengthDistribution.cpp  FragmentStartPositionDistribution.cpp  LibraryFormat.cpp  SBModel.cpp  SGSmooth.cpp  SequenceBiasModel.cpp  SimplePosBias.cpp  TranscriptGroup.cpp
src/output/: GZipWriter.cpp
src/quant/: SalmonQuantify.cpp
src/quant/pipeline/: MappingPipelineStages.cpp
src/util/: DistributionUtils.cpp  InputFileUtils.cpp  LibraryTypeUtils.cpp  PCA.cpp  PCAUtils.cpp  QuantOptionsUtils.cpp  SalmonExceptions.cpp  SalmonStringUtils.cpp  SalmonUtils.cpp  TemplateInstantiations.cpp
tests/: GCSampleTests.cpp  KmerHistTests.cpp  LibraryTypeTests.cpp  README.md  TestUtils.cpp  UnitTests.cpp  basic_alevin_test.sh  test_quant.nf
version_info/: 0.10.1  0.10.3  0.13.1  0.14.2  0.3.0  0.3.2  0.4.0  0.5.1  0.7.0  0.7.1  0.7.2  0.7.3  0.8.1  0.9.0  1.1.0  1.2.0  1.3.1  1.4.0  1.7.0  copy_old.sh  index.md
(+182 files in other folders)
